[gd_scene load_steps=15 format=2]

[ext_resource path="res://graphics/Map.png" type="Texture" id=1]
[ext_resource path="res://graphics/TransparentButton.png" type="Texture" id=2]
[ext_resource path="res://src/Map.gd" type="Script" id=3]
[ext_resource path="res://control_theme.tres" type="Theme" id=4]
[ext_resource path="res://graphics/lab/CheckButton.png" type="Texture" id=5]
[ext_resource path="res://graphics/CodeHighlight.png" type="Texture" id=6]
[ext_resource path="res://graphics/general/door.png" type="Texture" id=7]
[ext_resource path="res://font/besley/Besley-Fatface.otf" type="DynamicFontData" id=8]
[ext_resource path="res://graphics/general/Note2.png" type="Texture" id=9]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://font/besley/Besley-Bold.otf"

[sub_resource type="DynamicFont" id=2]
size = 64
use_filter = true
extra_spacing_space = -100
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://font/besley/Besley-Bold.otf"

[sub_resource type="DynamicFont" id=4]
size = 64
outline_size = 1
use_filter = true
font_data = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 8 )

[node name="Map" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1107.0
margin_top = -721.0
margin_right = 84.0
margin_bottom = 121.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapOpen" type="Sprite" parent="."]
position = Vector2( 593.74, 421 )
texture = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="MapOpen"]

[node name="ColorRect" type="ColorRect" parent="MapOpen/CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VideoPlayer" type="VideoPlayer" parent="MapOpen/CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Node2D" parent="MapOpen"]

[node name="RoomSelect_TH_AULA" type="TouchScreenButton" parent="MapOpen/Sprite"]
position = Vector2( -355.575, -236.498 )
scale = Vector2( 0.514552, 0.315174 )
normal = ExtResource( 2 )

[node name="RoomSelect_TH_CLASS" type="TouchScreenButton" parent="MapOpen/Sprite"]
position = Vector2( -334.018, -365.129 )
scale = Vector2( 0.611423, 0.205848 )
normal = ExtResource( 2 )

[node name="RoomSelect_TH_NAWI" type="TouchScreenButton" parent="MapOpen/Sprite"]
position = Vector2( -86.428, 158.675 )
scale = Vector2( 0.157205, 0.21501 )
normal = ExtResource( 2 )

[node name="RoomSelect_TH_ADMIN" type="TouchScreenButton" parent="MapOpen/Sprite"]
position = Vector2( -452.909, 210.772 )
scale = Vector2( 0.188404, 0.126653 )
normal = ExtResource( 2 )

[node name="RoomSelect_TH_GYM" type="TouchScreenButton" parent="MapOpen/Sprite"]
position = Vector2( 366.167, -317.033 )
scale = Vector2( 0.272696, 0.657367 )
normal = ExtResource( 2 )

[node name="RoomSelect_LB_MZW" type="TouchScreenButton" parent="MapOpen/Sprite"]

[node name="RoomSelect_LB_COM-LAB" type="TouchScreenButton" parent="MapOpen/Sprite"]

[node name="RoomSelect_LB_LAB" type="TouchScreenButton" parent="MapOpen/Sprite"]

[node name="RoomSelect_WS_ME" type="TouchScreenButton" parent="MapOpen/Sprite"]

[node name="RoomSelect_WS_WI" type="TouchScreenButton" parent="MapOpen/Sprite"]

[node name="RoomSelect_WS_FS" type="TouchScreenButton" parent="MapOpen/Sprite"]

[node name="RoomSelect_WS_MB" type="TouchScreenButton" parent="MapOpen/Sprite"]

[node name="RoomSelect_WS_GT" type="TouchScreenButton" parent="MapOpen/Sprite"]

[node name="RoomSelect_WS_WM" type="TouchScreenButton" parent="MapOpen/Sprite"]

[node name="TestHighlight" type="Sprite" parent="MapOpen"]
modulate = Color( 0.815686, 0.815686, 0.815686, 1 )
position = Vector2( 329.066, 266.027 )
scale = Vector2( 0.193233, 0.184098 )
texture = ExtResource( 6 )

[node name="TextEdit" type="LineEdit" parent="MapOpen"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -921.119
margin_top = -598.63
margin_right = -718.119
margin_bottom = -533.63
rect_scale = Vector2( 0.8, 0.8 )
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
max_length = 5
placeholder_text = "00000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MapOpen"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -904.115
margin_top = -643.61
margin_right = -488.115
margin_bottom = -578.61
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = SubResource( 4 )
text = "Enter Code:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CodeHint" type="Label" parent="MapOpen"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -936.833
margin_top = -540.26
margin_right = -519.833
margin_bottom = -475.259
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = SubResource( 4 )
text = "Raum: 53412"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchScreenButton" type="TouchScreenButton" parent="MapOpen"]
position = Vector2( 426.26, 243 )
scale = Vector2( 0.08, 0.08 )
normal = ExtResource( 5 )

[node name="SkipToLab" type="TextureButton" parent="MapOpen"]
visible = false
margin_left = 513.0
margin_top = 323.0
margin_right = 840.0
margin_bottom = 963.0
rect_scale = Vector2( 0.12, 0.1 )
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CodeOKButton" type="ColorRect" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -171.0
margin_top = -130.0
margin_right = -83.0
margin_bottom = -84.0
color = Color( 0.709804, 0.709804, 0.709804, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CodeOKButton"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 44.0
margin_bottom = 23.0
rect_scale = Vector2( 2, 2 )
text = "OK"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 5

[node name="DialogBox" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.729412, 0.729412, 0.729412, 0.745098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Note2" type="Sprite" parent="CanvasLayer/DialogBox"]
position = Vector2( 542.677, 320 )
scale = Vector2( 0.48824, 0.488241 )
texture = ExtResource( 9 )

[node name="DialogOkButton" type="TouchScreenButton" parent="CanvasLayer/DialogBox"]
position = Vector2( 699.294, 383.8 )
scale = Vector2( 0.100854, 0.135635 )
normal = ExtResource( 2 )

[node name="Content" type="Label" parent="CanvasLayer/DialogBox"]
margin_left = 267.0
margin_top = 200.0
margin_right = 775.0
margin_bottom = 379.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.258824, 0.258824, 0.258824, 1 )
text = "Der eingegebene Code ist leider falsch."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="released" from="MapOpen/Sprite/RoomSelect_TH_AULA" to="." method="_on_RoomSelect_TH_AULA_released"]
[connection signal="released" from="MapOpen/Sprite/RoomSelect_TH_CLASS" to="." method="_on_RoomSelect_TH_CLASS_released"]
[connection signal="released" from="MapOpen/Sprite/RoomSelect_TH_NAWI" to="." method="_on_RoomSelect_TH_NAWI_released"]
[connection signal="released" from="MapOpen/Sprite/RoomSelect_TH_ADMIN" to="." method="_on_RoomSelect_TH_ADMIN_released"]
[connection signal="released" from="MapOpen/Sprite/RoomSelect_TH_GYM" to="." method="_on_RoomSelect_TH_GYM_released"]
[connection signal="text_changed" from="MapOpen/TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="released" from="MapOpen/TouchScreenButton" to="." method="_on_CodeOK_released"]
[connection signal="pressed" from="MapOpen/SkipToLab" to="." method="_on_SkipToLab_pressed"]
[connection signal="released" from="CanvasLayer/DialogBox/DialogOkButton" to="." method="_on_DialogOkButton_released"]
